<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnIrActivity2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="36dp"
        android:text="@string/boton_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnIrActivity3"/>

    <Button
        android:id="@+id/btnIrActivity3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/boton_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnIrActivity4"
        app:layout_constraintStart_toEndOf="@+id/btnIrActivity2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnIrActivity4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="36dp"
        android:text="@string/boton_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnIrActivity3"/>

    <View
        android:id="@+id/vwPlayer"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:background="#ECEFEE"
        app:layout_constraintBottom_toTopOf="@+id/btnIrActivity3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        app:layout_constraintEnd_toEndOf="@+id/vwPlayer"
        app:layout_constraintStart_toStartOf="@+id/vwPlayer"
        app:layout_constraintTop_toTopOf="@+id/vwPlayer"
        app:srcCompat="@drawable/reproductor" />

    <ImageButton
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/vwPlayer"
        app:layout_constraintEnd_toStartOf="@+id/btnStop"
        app:layout_constraintStart_toStartOf="@+id/vwPlayer"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@android:drawable/ic_media_play" />

    <ImageButton
        android:id="@+id/btnStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/vwPlayer"
        app:layout_constraintEnd_toEndOf="@+id/vwPlayer"
        app:layout_constraintStart_toEndOf="@+id/btnPlay"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@android:drawable/ic_media_pause" />

</androidx.constraintlayout.widget.ConstraintLayout>